--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3{
+  color: #333;
+}
+
+h2{
+  text-decoration: underline;
+  text-decoration-color: rgb(255,68,80);
+  text-decoration-thickness: 5px;
+  text-align: center;
+}
+
+p{
+  font-size: 1.4rem;
+  text-align: justify;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.pad{
+  padding: 0 100px;
+  margin-top: 21px;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 40px;
+  aspect-ratio: 1;
+   --c: linear-gradient(#db0e0e 0 0);
+   --m: radial-gradient(farthest-side,#e61212 92%,#c51a1a00);
+  background: 
+    var(--m) center               /12px 12px,
+    var(--c) left 50% top    -20px/8px 16px, 
+    var(--c) left 50% bottom -20px/8px 16px, 
+    var(--c) top  50% left   -20px/16px 8px, 
+    var(--c) top  50% right  -20px/16px 8px;
+  background-repeat: no-repeat;
+  animation: 
+    l18-1 1.5s infinite,
+    l18-2 1.5s infinite;
+}
+@keyframes l18-1 {
+  30%,
+  70% {background-position: 
+        center,
+        left 50% top    calc(50% - 8px),
+        left 50% bottom calc(50% - 8px),
+        top  50% left   calc(50% - 8px),
+        top  50% right  calc(50% - 8px)}
+}
+@keyframes l18-2 {
+  0%,40%   {transform: rotate(0)}
+  60%,100% {transform: rotate(90deg)}
+}
+
+@media only screen and (max-width: 906px){
+  .pad{
+    padding: 0 15px;
+  }
 }
