--- a/src/Components/Contacto/contacto.css
+++ b/src/Components/Contacto/contacto.css
@@ -9,5 +9,21 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
+}
+
+@media only screen and (max-width: 1111px){
+    .half-half{
+        width: 100%;
+        align-items: center;
+    }
+
+    .flex-middle{
+        justify-content: center;
+        align-items: center;
+    }
+
+    .flex-middle iframe{
+        width: 100%;
+    }
 }
