--- a/src/Nav/nav.css
+++ b/src/Nav/nav.css
@@ -100,7 +100,7 @@ a:hover{
     }
 
     .ham-links{
-        display: flex;
+        display: none;
         flex-direction: column;
         width: 100%;
         align-items: center;
